--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-/node_modules
+node_modules
 /.pnp
 .pnp.js
 
@@ -20,3 +20,10 @@ package-lock.json
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+# MACOS environment
+.DS_Store
+
+.vscode
+jsconfig.json
+
