--- a/express-server/package.json
+++ b/express-server/package.json
@@ -15,6 +15,7 @@
     "express": "^4.17.1",
     "pg": "^8.5.1",
     "pg-hstore": "^2.3.3",
-    "sequelize": "^5.21.13"
+    "sequelize": "^5.21.13",
+    "swagger-jsdoc": "^6.0.0-rc.3"
   }
 }
